--- a/business.html
+++ b/business.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Small Business</title>
-	<link rel="stylesheet" href="business.css">
+	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" media="screen and (max-width:429px)" href="businessiphone12and13promax.css">
 </head>
 <body>
